# Gpufit

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  TODO.md
.github/workflows/: c-cpp.yml  ci.yml  release.yml
Cpufit/: Cpufit.def  README.md  cpufit.h  interface.cpp  lm_fit.cpp  lm_fit.h  lm_fit_cpp.cpp
Cpufit/matlab/: CMakeLists.txt
Cpufit/python/: CMakeLists.txt  README.txt  setup.py
Cpufit/python/pycpufit/: __init__.py  cpufit.py  version.py
Gpufit/: CMakeLists.txt
Gpufit/java/: CMakeLists.txt
Gpufit/java/gpufit/: build.gradle
Gpufit/java/gpufit/src/main/java/com/github/gpufit/: Gpufit.java
Gpufit/matlab/: CMakeLists.txt  gpufit_version.m
Gpufit/models/: T1_fa_fit.cuh  patlak.cuh  tofts.cuh  tofts_extended.cuh  two-compartment_exchange.cuh
Gpufit/python/: setup.py
Gpufit/python/pygpufit/: gpufit.py  version.py
Gpufit/tests/: Error_Handling.cpp
docs/: conf.py  epilog.txt
examples/c++/: CMakeLists.txt  Patlak_Fitting.cpp  T1_FA_Exponential_Fitting.cpp
examples/c++/gpu_vs_cpu_profiling/: CMakeLists.txt  Gpufit_Cpufit_MRI_Parity.cpp
examples/python/: patlak.py
package/: create_package.bat  create_package.sh  install_gpufit_python.sh  sdk_readme.txt
tests/: CMakeLists.txt  Consistency.cpp  ToftsCpu.cpp
